--- a/docs/pages/docs/guides/convert-from-hono-guide.mdx
+++ b/docs/pages/docs/guides/convert-from-hono-guide.mdx
@@ -125,7 +125,7 @@ declare module '@getcronit/pylon' {
 }
 ```
 This declaration file provides type definitions for Pylon.
-> **Note:** For more information on using bindings and variables in Pylon, read [Bindings & Variables](https://pylon.cronit.io/docs/guides/bindings-and-variables).
+> **Note:** For more information on using bindings and variables in Pylon, read [Bindings & Variables](./bindings-and-variables.mdx).
 
 ### Update `tsconfig.json`
 Modify your `tsconfig.json` to extend Pylon's TypeScript configuration:
