feat(docs): Update building with pylon guide
- Adds a conclusion part to the first guide chapter

--- a/docs/pages/docs/guides/building-with-pylon/in-memory-setup.mdx
+++ b/docs/pages/docs/guides/building-with-pylon/in-memory-setup.mdx
@@ -221,6 +221,12 @@ Since this method changes our data, we place it in the `Mutation` object. Now, w
 
 ![Pylon GraphQL Mutation](/images/guides/building-with-pylon/static-playground-add.png)
 
-Perfect! We have successfully implemented a simple class that holds in-memory data and provides methods to interact with it. We can now read and modify the data using the built-in GraphQL playground.
+Perfect! We have successfully implemented a simple class that holds in-memory data and provides methods to interact with it.
 
 You can go ahead and implement more methods to interact with the data, like updating or deleting a booking. The possibilities are endless, and Pylon gives you the freedom to implement your logic the way you like it.
+
+## Conclusion
+
+This guide showed how easy it is to get started with Pylon. We created a simple class that holds in-memory data and provides methods to interact with it. We then registered the class methods in Pylon and tested them using the built-in GraphQL playground.
+
+In the next guide, we will take a look at how we can use external data sources to fetch and modify data in our service.
