feat(docs): Update building with pylon guide
- Adds the Integrating Prisma chapter

--- a/docs/pages/docs/guides/building-with-pylon/external-apis.mdx
+++ b/docs/pages/docs/guides/building-with-pylon/external-apis.mdx
@@ -5,13 +5,13 @@ import {Callout} from '@components/callout'
 
 With the first chapter of this guide ([In-Memory Setup](/docs/guides/building-with-pylon/in-memory-setup)), we learned how to set up a simple in-memory data store. To make our small application more realistic, we will now connect to an external API to fetch some data asynchronously.
 
-<Authors date="October 11th, 2024">
+<Authors date="October 12th, 2024">
   <Author name="Jan Emig" link="https://github.com/jaemig" />
 </Authors>
 
 ## Project Structure
 
-After [setting up the in-memory project](/docs/guides/building-with-pylon/in-memory-setup) correctly, you should see a project structure similar to this:
+After setting up the [in-memory project](/docs/guides/building-with-pylon/in-memory-setup) correctly, you should see a project structure similar to this:
 
 ```
 my-pylon/
