feat(docs): Update building with pylon guide
- Corrects a localhost url in the "integrating prisma" chapter

--- a/docs/pages/docs/guides/building-with-pylon/integrating-prisma.mdx
+++ b/docs/pages/docs/guides/building-with-pylon/integrating-prisma.mdx
@@ -16,7 +16,7 @@ In the last step, we will look at how we can use Prism to bring communication wi
   Guide](https://www.prisma.io/docs/getting-started/quickstart) to familiarize
   yourself with the basics.
 
-Pylon also provides it's own [prisma-extended-models](http://localhost:3001/docs/integrations/databases#using-prisma-extended-models-recommended) package to make the integration of Prisma and its schema even easier.
+Pylon also provides it's own [prisma-extended-models](/docs/integrations/databases#using-prisma-extended-models-recommended) package to make the integration of Prisma and its schema even easier.
 
 </Callout>
 
