--- a/docs/pages/docs/guides/building-with-pylon/introduction.mdx
+++ b/docs/pages/docs/guides/building-with-pylon/introduction.mdx
@@ -8,7 +8,7 @@ This beginner guide will walk you through multiple steps of how Pylon can be use
   <Author name="Jan Emig" link="https://github.com/jaemig" />
 </Authors>
 
-We will start with a simple setup using [hardcoded data](./hardcoded-data.mdx) and then move on to communicate with an external API ([External API](./external-api)) and finally use Prisma to interact with a database ([Integrating Prisma](./integrating-prisma)).
+We will start with a simple setup using [Hardcoded Data](./hardcoded-data.mdx) and then move on to communicate with an external API ([External API](./external-api)) and finally use Prisma to interact with a database ([Integrating Prisma](./integrating-prisma)).
 
 ## Set Up Your Pylon Service
 
