--- a/docs/pages/docs/guides/building-with-pylon/integrating-prisma.mdx
+++ b/docs/pages/docs/guides/building-with-pylon/integrating-prisma.mdx
@@ -4,7 +4,7 @@ import {Callout} from '@components/callout'
 # Integrating Prisma
 
 In the last two chapters we have looked at synchronous and asynchronous data sources and learned that we can structure and build our code however we want without being limited by Pylon.
-In the last step, we will look at how we can use Prism to bring communication with databases into our Pylon service.
+In the last step, we will look at how we can use Prisma to bring communication with databases into our Pylon service.
 
 <Authors date="October 13th, 2024">
   <Author name="Jan Emig" link="https://github.com/jaemig" />
