--- a/docs/pages/docs/guides/building-with-pylon/summary.mdx
+++ b/docs/pages/docs/guides/building-with-pylon/summary.mdx
@@ -11,7 +11,7 @@ Let's end our journey with Pylon by summarizing what we have learned so far.
 
 First, we implemented our logic through a class, whose methods we passed to Pylon as a singleton instance. Then we looked at a simpler approach, where we placed independent functions into a `.ts` file and passed them to Pylon afterward.
 
-In addition, we looked at how we can incorporate different types of data sources ([hardcoded](./hardcoded-data), [external API](./external-api), and [Prisma/database](./integrating-prisma)).
+In addition, we looked at how we can incorporate different types of data sources ([Hardcoded Data](./hardcoded-data), [External API](./external-api), and [Database with Prisma](./integrating-prisma)).
 
 All these points have shown that Pylon does not impose any restrictions on how we structure our code, and we can tap into different data sources in any way we want.
 
